@@ -1,21 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX monkeysign-1.1-basename.patch 393 SHA256 68fd68a6c2aad7780a6e940c12d55f65cbcf06e2574b5537e066fcd300b5066c SHA512 ae9e01a6aff91231c700f1e46ef7f4dabed8ba6d3d3a275bb6405b767bcb6f40c96ff7563fe693a17d76e26b63b2ccb0e66e834e910cef5bb94d2a9f9cd366d3 WHIRLPOOL 05f6ed59a288d8868e0ec4faf8e7f5a0c2a14cfee860d3562cb50035544d4130ab95c9d1e2f1ccb0e1c4af70ef1a4b2cac88c29751148af00dc94bc5a680ffc6
 AUX monkeysign-2.0.0-rst2s5.patch 963 SHA256 ba648d952f4175fa12beb346442dfcb58702ed0ee6d1100b18238c305e68368c SHA512 c738d3a29dd272fe7bbc1108371b302d3b551bb61c8a2725c39ae57804f67539fd9fc2222fe9a53d2b2a213280b6c1707dc9f8fdc541264216f92799d7930d58 WHIRLPOOL 9840e2deee4fd8c5b3baf77a4ade21be4520e124b6cfa36b011d4f1410ccef45c9312096a01391f361220358656242884dc0b325db362fac7a4c80566c5760df
 AUX monkeysign-2.0.2-smtplib.patch 1187 SHA256 74314122d91fb2eb580f060d2f9cf856bebbc6e42abd8c3fbb910bb81d3ded3e SHA512 b62c7b087f4c44b6078be9a49d21790888b5c6313d5780e4b9dcfeb86d879552fe0b3f9c410eaf53327ba0dd8ee056643f7c9b629fcf48251e1b8ebf598a34c6 WHIRLPOOL af1322a26cf05d8d655aac6945127aeadbaf8f367f42ebc12843733337f71d46a774736bfd48884c14290a86d66a36d74cef09985544967e7d4adb397a580711
-AUX monkeysign.desktop 188 SHA256 c1bcfa18ddddedf08c90f790ffd598248f580aca362f56f134fe4238b5de2a15 SHA512 e2418323721dd5eb8859558be5693c0ee5d970edb967a3fefb58876802f431cddeccd87708936141d0d691563a1321930fbe28cf753d069441e33de7666c5d99 WHIRLPOOL dc41569388dd9bfa2861519a795c8f62021c8a44ba4211c660c300542e7bf23f66641677079ba13ece520fbee1d9da621ba31114dcdeab777ba509edfbe777d5
+AUX monkeysign.desktop 181 SHA256 0b84e2ecc02c760206c313e8a53c4de835896b59536174cec6e644edf55b4d32 SHA512 ec4442e2467700e355a3ed58cb3512119e70d76e5bf75acba4ee8109bd0fea9066cbb23ad7f93551c40a6f8f345f255e7ab73cbcfd974a878275004d8c7cfb98 WHIRLPOOL 54fdb196b97a67730dc658363c6b12a728e048c23d1e7e96333134da0214701aa36119f5efffda22534ed20585fbb2f513eb6d6dded089e088cd015e86a4f4c6
 DIST monkeysign_2.0.2.tar.xz 1006592 SHA256 c883dc0c4f1dbd313239012e1c5984a6ef19b0e5040e613e1727085aa619bf63 SHA512 a7686708a0d1eae0586ba2847bfb788ae9a167462e596ac8486077eaa1d6e7a6495f837596724e84ccac91102f742cc9e8b5960254242a1e935205ac1f8c8b7c WHIRLPOOL 38ab35d2954ca8d0ef32357afbb4a12674ba04b5c8cebadba5ee180ed36d2871d2b49d23ffdfb302292200ad835d37f545cae841ba98c6b8ee163ecbe65eabd9
-EBUILD monkeysign-2.0.2-r1.ebuild 1193 SHA256 c6c55914395ae1fd45d9d55fb6156b6d7ebf669408d6e5842447f0106e32628c SHA512 156d09ed723148b8f94f223ccf9555f35bbd3dcba3a5d40810aedd231161bc461bc7a32680d9cc5a88cd685f2dfb95254319ef0b64750306a60264511457706d WHIRLPOOL 441ab4e848d1ce5a587de947fa4886cac71acf3dee8e8c758cf75cdef292ee1b4b427586f73e687a08720fdf49574ff284d06d43a229a2bc85b3e71eded347dc
-MISC ChangeLog 1959 SHA256 dde2bca509af8b2d141e14305a366063f23f2ae8e03e287866710eb991d9b192 SHA512 5b3cfe1f47c95158010484320bf9ac4d72d5b07ca2bee6e5972eb8044f17defbd07481072be490e8f82844761044e0608504c1f4eaa199b723a51f2fa02d7a7b WHIRLPOOL d25271cae8593e72c33544c452b310dcb28c713066313313baef6f133b2452bbbdd39bee8f71a1ec8853d42c4c0f6543ca8af84dc7eb9fd9f3ca2d7fa22bc151
+EBUILD monkeysign-2.0.2-r1.ebuild 1203 SHA256 67d81b22c181c5b1cb929c780efbb7e4132588506d5c315273cba0dc65fce1de SHA512 4bbc2834ee72b5e922406ba9431533671f9a2bc8acca015e0afdae3419527a7b2a8376587b9df0c63f4b2a3f744e7912b66509dbc3b3483596734641bdb8a0f1 WHIRLPOOL 381d93ce2f20a570f1e9537ebffbc95113b5f9668d1af29b747ceb2ee9d0037b496c3f9771d7fa21b6c3d777315948ad53d5d66774e1ce7e2dc503a4d13bfc35
+MISC ChangeLog 2083 SHA256 151ed4b2582a2ee9c30facfb8bfbc6a984c600c4043618a0cc71afa7f2af90b9 SHA512 e1744885a54a32356af2f86aa77cc4fe24236715366174ce474aa0b4e1fd5818c84b92edda5218bad7aeff56bcc7b03baaac20107bab425ae98f24dc8c2f6c2c WHIRLPOOL fe34a8d60b44ad6f239387c363494f2b2c3850235ad0156f2012fad074c6515ccbf810644765876bf57ac02e902872281ee4ad909ac485a76c51e9242bb467ec
 MISC metadata.xml 237 SHA256 5c58f0c8f9a9d5f50383f6cb306cf688924be830a0be08ede1ae7866c3566c2c SHA512 cd2f27119bff3427ab44b55caf2fc21ed3f56ab1251747a8213ad9914aa284e23e922c73018307a22ccd359906e4b82222a4dab35ef9469129dbc79b4b403b4f WHIRLPOOL 3f039cb8a9e18e11bf4dbd398f81a1b47f4e0a17bf53cb8f642f6cdeeaa13731307111e2f6d34689046a545de8c988a5bf0121473aac548affcb7352ebb1f590
 -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
 
-iQEcBAEBCAAGBQJUz/lqAAoJEP7VAChXwav65QcH/1RB84DtTKL1k3gnlCgVSnIO
-QIOZ4ReWR2kS6id3BbtGvWNO7mhqXQ3EfMnODiVtzfU6fTi4gtc52LO9RfAy+owK
-hWEXZqSbhgSvESjdBTRtr4tjpoL4QZSHcTCj5jEypUz515Dpur1mcVioWkGRlnG/
-YlRmm75cJJeJEiIuOi5FF9bT+SUzOBW0MZzCj0wPgYrrU2/8YRhQ+0dqRenvC5HE
-+kcDdZgrWYxFB5jbdMr/ikHSQtkSlmk/Q92+UD5zChJQY+s6pL3T0AT9+UN6Gi5V
-GlaM6Vy6uqkcbduJgNYn8Mnf7C7B6BBJQcd9Urn0D4+vMXUL2HCUaMDeQAXp3z4=
-=WQ6J
+iQJ8BAEBCgBmBQJVC87EXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirDakP/3mKChWOCflY2Uu6SeieqIh7
+5sYLAKrN4SV2HRhdn6t9wxxJCYKNRIlXu1uUdzx/qnaNxbzhtg2KrbMq/Mw7s2es
+Y85t2uRfaG5KFNOCNJjLkli/45+BFS74ihls/hA3+KbcsR6dHgQPORF2IyvpDX6Q
+8rlzyojJCx4nAMHAYqQwqwo5FCOmbrD75cOX9mUEwuS+ZMuUGyOKq5K+LQC7dDIJ
+rlUKM8w5QGRZtilK5Q6ln/dkT0XmuGj5Cz4g5WFJGiU2AmIApI1qPle+/I0hgwWy
+mBDHH3MCEnpMF6PK5qkgDjxoAwxj2lJNDVJ2PlBvp8KFnK7EEGYppVTKCa03K3cx
+r9zS+rKVvgDWgBLBqEQC0GZoGbRZdcalP0HKZ52kcVEE7miZWU5KyAE8hmxcSt0Z
+RuJL5Juv0NveuR9fLhuD1mftYKmf5VOBubxvhbKAQ+W/V1t+uUhj2XlRlGeXSGzm
+oVRpCkpnEyl1Ndme661dNRS68mVnQAyhxU2ciXx/UpdR01U9JYhXA1CtUM7OlePs
+oQryFhxjiRGUs+H/ZYNdW3RKR25uxbQebVChKBv/6DKeD0mYE0I63jzVELYaZAtq
+Dcyp2OvtwPHuDScwSdlu3wzFQK0bYfKmqXAGdxCJ+Log7EQWgpAidrOeqqcimaMl
+CEo05tdGj6rurJ+RIb7c
+=1WL8
 -----END PGP SIGNATURE-----
