@@ -1,9 +1,8 @@
 [Desktop Entry]
-Encoding=UTF-8
 Version=1.0
 Name=Monkeyscan
 Comment=Monkeyscan part of monkeysign
-Categories=GTK;GNOME;X-Internet;
+Categories=Network;GTK;GNOME;X-Internet;
 Exec=/usr/bin/monkeyscan
 Terminal=false
 Type=Application
